<resources>
    <string name="app_name">ShareConnect</string>
    <string name="add_link">Add Media Link</string>
    <string name="settings">Settings</string>
    <string name="server_profiles">Server Profiles</string>
    <string name="add_profile">Add Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="server_url">Server URL</string>
    <string name="server_port">Server Port</string>
    <string name="save">Save</string>
...
